--- a/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
+++ b/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
@@ -189,19 +189,19 @@
 
     <div #openlayersContainer *ngIf="playingLibrary === WebMappingLibrary.OPENLAYERS" class="h-full w-full">
         @defer (on viewport(openlayersContainer)) {
-        <div class="map openlayers h-full w-full"></div>
+        <div class="map openlayers h-full w-full" [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
         }
     </div>
 
     <div #maplibreContainer *ngIf="playingLibrary === WebMappingLibrary.MAPLIBRE" class="h-full w-full">
         @defer (on viewport(maplibreContainer)) {
-        <div class="map maplibre h-full w-full"></div>
+        <div class="map maplibre h-full w-full" [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
         }
     </div>
 
     <div #cesiumContainer *ngIf="playingLibrary === WebMappingLibrary.CESIUM" class="h-full w-full">
         @defer (on viewport(cesiumContainer)) {
-        <div class="map cesium h-full w-full"></div>
+        <div class="map cesium h-full w-full" [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
         }
     </div>
 </dialog>
