Add examples for data formats

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,11 @@
 
     <meta name="author" content="Gábor Farkas">
     <meta name="keywords" content="software, counseling, team building, saas, software architecture">
-    <meta name="description" content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
+    <meta name="description"
+        content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
     <meta property="og:title" content="Farkas Gábor e.v. team building & counseling">
-    <meta property="og:description" content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
+    <meta property="og:description"
+        content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/assets/bg-lecture.jpg">
     <meta name="twitter:card" content="summary">
@@ -33,7 +35,9 @@
 
 <body class="bg-primary">
     <app-root></app-root>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <noscript>
+        <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" />
+    </noscript>
 </body>
 
 </html>
