--- a/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
+++ b/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
@@ -127,7 +127,7 @@
         @if(featureSupportItems) {
         <div class="max-md:overflow-x-auto max-w-full">
             <table class="w-full relative">
-                <thead class="sticky top-0 bg-primary">
+                <thead class="sticky top-0 bg-primary z-10">
                     <tr>
                         <th></th>
                         <th>{{WebMappingLibrary.LEAFLET}}</th>
