Clarify on the fly & add more content

--- a/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
+++ b/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
@@ -186,7 +186,9 @@
     </section>
 
     <p class="py-6">If you find any error in the table or would like to extend the matrix, feel free to contact me or
-        open an issue on GitHub.</p>
+        open an issue on GitHub. The raw support matrix can be downloaded from
+        <a href="/assets/web-mapping/support-matrix.csv">here</a>.
+    </p>
 </div>
 
 <dialog class="modal" [windowTitle]="playingItem?.name + ' in ' + playingLibrary"
