--- a/src/pages/map/map.page.html
+++ b/src/pages/map/map.page.html
@@ -1,1 +1,23 @@
-<div>Hello map</div>
+<div #leafletContainer *ngIf="library === WebMappingLibrary.LEAFLET" class="h-full w-full">
+    @defer (on viewport(leafletContainer)) {
+    <div class="map leaflet h-full w-full"></div>
+    }
+</div>
+
+<div #openlayersContainer *ngIf="library === WebMappingLibrary.OPENLAYERS" class="h-full w-full">
+    @defer (on viewport(openlayersContainer)) {
+    <div class="map openlayers h-full w-full"></div>
+    }
+</div>
+
+<div #maplibreContainer *ngIf="library === WebMappingLibrary.MAPLIBRE" class="h-full w-full">
+    @defer (on viewport(maplibreContainer)) {
+    <div class="map maplibre h-full w-full"></div>
+    }
+</div>
+
+<div #cesiumContainer *ngIf="library === WebMappingLibrary.CESIUM" class="h-full w-full">
+    @defer (on viewport(cesiumContainer)) {
+    <div class="map cesium h-full w-full"></div>
+    }
+</div>
