--- a/src/pages/web-mapping/sandbox/sandbox.page.html
+++ b/src/pages/web-mapping/sandbox/sandbox.page.html
@@ -1,8 +1,14 @@
-<div class="h-12">
+<div class="h-12 flex flex-row justify-between">
     <nav>
         <span class="cabin-sketch text-2xl">CartoSandbox</span>
     </nav>
+    <div class="h-full">
+
+    </div>
 </div>
 <div class="flex-grow flex items-center">
     <div class="no-phone px-6 w-full lg:hidden flex flex-col items-center" [minWidth]="1024"></div>
+    <div class="hidden lg:flex flex-row w-full h-full">
+        <div class="code-editor w-1/2 h-full"></div>
+    </div>
 </div>
