Add code running capability to sandbox

--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -115,7 +115,7 @@
                 qualified in:</p>
             <ul class="list-disc pl-12">
                 <li>Web mapping (OpenLayers, MapLibre GL JS, Leaflet, Cesium JS).</li>
-                <li>Front-end frameworks (Angular, Vue, Webpack).</li>
+                <li>Front-end frameworks (Angular, React, Vue, Webpack).</li>
                 <li>Creating modern, modular JavaScript/TypeScript libraries.</li>
                 <li>PHP frameworks (UserSpice, Laravel).</li>
                 <li>C# in general, but from a web perspective .NET MVC, especially Web APIs.</li>
