--- a/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
+++ b/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
@@ -59,7 +59,7 @@
         </ul>
         <p class="pb-2">There are some features with interactive examples to see. If a support score box has a small
             play icon in it, you can click on it and the example will be displayed in a modal window:</p>
-        <div [supportRectangle]="{score: FeatureSupportScore.NATIVE, example: 'about:dino'}"></div>
+        <div [supportRectangle]="{score: FeatureSupportScore.NATIVE, line: 0}"></div>
 
         <p class="py-6">Currently, the following libraries appear as subjects of comparison in the support matrix:</p>
         <div class="flex w-full justify-center">
@@ -149,23 +149,23 @@
                         <td>
                             <div [supportRectangle]="item.support[WebMappingLibrary.LEAFLET]"
                                 (click)="playExample(item, WebMappingLibrary.LEAFLET)"
-                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.LEAFLET].example}"></div>
+                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.LEAFLET].line !== undefined}"></div>
                         </td>
                         <td>
                             <div [supportRectangle]="item.support[WebMappingLibrary.OPENLAYERS]"
                                 (click)="playExample(item, WebMappingLibrary.OPENLAYERS)"
-                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.OPENLAYERS].example}">
+                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.OPENLAYERS].line !== undefined}">
                             </div>
                         </td>
                         <td>
                             <div [supportRectangle]="item.support[WebMappingLibrary.MAPLIBRE]"
                                 (click)="playExample(item, WebMappingLibrary.MAPLIBRE)"
-                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.MAPLIBRE].example}"></div>
+                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.MAPLIBRE].line !== undefined}"></div>
                         </td>
                         <td>
                             <div [supportRectangle]="item.support[WebMappingLibrary.CESIUM]"
                                 (click)="playExample(item, WebMappingLibrary.CESIUM)"
-                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.CESIUM].example}"></div>
+                                [ngClass]="{'cursor-pointer': item.support[WebMappingLibrary.CESIUM].line !== undefined}"></div>
                         </td>
 
                         } @else {
@@ -192,32 +192,32 @@
 </div>
 
 <dialog class="modal" [windowTitle]="playingItem?.name + ' in ' + playingLibrary"
-    [gitHubUrl]="playingItem?.support?.[playingLibrary!]!.example" (closed)="clearExample()">
+    [gitHubUrl]="playingExampleUrl" (closed)="clearExample()">
     <div #leafletContainer *ngIf="playingLibrary === WebMappingLibrary.LEAFLET" class="h-full w-full">
         @defer (on viewport(leafletContainer)) {
         <div class="map leaflet h-full w-full"
-            [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
+            [example]="playingItem!.support![playingLibrary].line !== undefined ? playingItem!.name : undefined"></div>
         }
     </div>
 
     <div #openlayersContainer *ngIf="playingLibrary === WebMappingLibrary.OPENLAYERS" class="h-full w-full">
         @defer (on viewport(openlayersContainer)) {
         <div class="map openlayers h-full w-full"
-            [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
+            [example]="playingItem!.support![playingLibrary].line !== undefined ? playingItem!.name : undefined"></div>
         }
     </div>
 
     <div #maplibreContainer *ngIf="playingLibrary === WebMappingLibrary.MAPLIBRE" class="h-full w-full">
         @defer (on viewport(maplibreContainer)) {
         <div class="map maplibre h-full w-full"
-            [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
+            [example]="playingItem!.support![playingLibrary].line !== undefined ? playingItem!.name : undefined"></div>
         }
     </div>
 
     <div #cesiumContainer *ngIf="playingLibrary === WebMappingLibrary.CESIUM" class="h-full w-full">
         @defer (on viewport(cesiumContainer)) {
         <div class="map cesium h-full w-full"
-            [example]="playingItem!.support![playingLibrary].example ? playingItem!.name : undefined"></div>
+            [example]="playingItem!.support![playingLibrary].line !== undefined ? playingItem!.name : undefined"></div>
         }
     </div>
 </dialog>
