Add examples to select dropdown

--- a/src/pages/web-mapping/sandbox/sandbox.page.html
+++ b/src/pages/web-mapping/sandbox/sandbox.page.html
@@ -3,13 +3,18 @@
         <span class="cabin-sketch text-2xl">CartoSandbox</span>
     </nav>
     <div class="h-full flex items-center gap-6 mr-4">
+        <select [reset]="'0'" (change)="loadCodePreset($event.target)">
+            <option value="0" class="text-gray-400">Load preset</option>
+            <ng-container
+                *ngTemplateOutlet="loadCodeOptions; context: { items: this.availableCodes[this.library]?.children }" />
+        </select>
         <div class="flex items-center select-none cursor-pointer" (click)="runCode()">
             <fa-icon [icon]="faPlay" class="text-green-900 pr-2" size="1x" />
             <span>Run code</span>
         </div>
         <select [(ngModel)]="library">
             @for (library of WebMappingLibrary | keyvalue; track library.key) {
-                <option [value]="library.value">{{library.value}} (v{{libraryVersions[library.value]}})</option>
+            <option [value]="library.value">{{library.value}} (v{{libraryVersions[library.value]}})</option>
             }
         </select>
     </div>
@@ -18,10 +23,21 @@
     <div class="no-phone px-6 w-full lg:hidden flex flex-col items-center" [minWidth]="1024"></div>
     <div #sandboxContent class="hidden lg:flex flex-row w-full h-full">
         @defer (on viewport(sandboxContent)) {
-            <div class="code-editor w-1/2 h-full" [definitions]="extraTypes" [(value)]="currentCode"></div>
-            <div class="w-1/2 h-full">
-                <iframe #webMap class="w-full h-full" [src]="webMapUrl"></iframe>
-            </div>
+        <div class="code-editor w-1/2 h-full" [definitions]="extraTypes" [(value)]="currentCode"></div>
+        <div class="w-1/2 h-full">
+            <iframe #webMap class="w-full h-full" [src]="webMapUrl"></iframe>
+        </div>
         }
     </div>
 </div>
+
+<ng-template #loadCodeOptions [types]="openCodeTemplateTypes" let-items="items">
+    @for(item of items; track item.name) {
+    @if (item.children) {
+    <optgroup [label]="item.name" [class]="'depth-' + item.depth"></optgroup>
+    <ng-container *ngTemplateOutlet="loadCodeOptions; context: { items: item.children }" />
+    } @else {
+    <option [value]="item.name" [dataValue]="item">{{item.name}}</option>
+    }
+    }
+</ng-template>
