Add persistency service & load local snippets

--- a/src/pages/web-mapping/sandbox/sandbox.page.html
+++ b/src/pages/web-mapping/sandbox/sandbox.page.html
@@ -2,9 +2,11 @@
     <nav>
         <span class="cabin-sketch text-2xl">CartoSandbox</span>
     </nav>
-    <div class="h-full flex items-center gap-6 mr-4">
-        <select [reset]="'0'" (change)="loadCodePresetAsync($event.target)">
-            <option value="0" class="text-gray-400">Load preset</option>
+    <div class="h-full hidden lg:flex items-center gap-6 mr-4">
+        <fa-icon [icon]="faTrash" title="Delete current snippet" class="cursor-pointer text-red-700"></fa-icon>
+        <fa-icon [icon]="faFloppyDisk" title="Save as new snippet" class="cursor-pointer"></fa-icon>
+        <select [reset]="'0'" (change)="loadCodeSnippetAsync($event.target)">
+            <option value="0" class="text-gray-400">Load snippet</option>
             <ng-container
                 *ngTemplateOutlet="loadCodeOptions; context: { items: this.availableCodes[this.library]?.children }" />
         </select>
