--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -220,6 +220,7 @@
             the costs before we start collaborating, and you receive an invoice either at the end of the project or at
             every
             milestone we define. Project quotes contain sensible buffers, thus, minor adjustments won't alter the costs.
+            Short counseling prices are calculated with a net rate of 34€/hour.
         </p>
     </section>
 </div>
