--- a/src/pages/partnership/partnership.page.html
+++ b/src/pages/partnership/partnership.page.html
@@ -165,7 +165,8 @@
             long-term partnerships, I invoice monthly according to the hours dedicated to you in the previous month. You
             can
             track every detail of the completed work through Clockify shared reports anytime. The monthly time budget is
-            agreed on previously, so you can easily plan with my costs.</p>
+            agreed on previously, so you can easily plan with my costs. Since long-term partnerships are unique,
+            prices are calculated and tailored for each of them exclusively.</p>
 
         <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6">Communication</h1>
         <p class="md:text-lg pb-12 px-6 md:px-0">For a successful partnership, it is essential to understand each other
