Fix linting errors

--- a/src/pages/partnership/partnership.page.html
+++ b/src/pages/partnership/partnership.page.html
@@ -4,7 +4,7 @@
             company. You have the fundamental building blocks in place. You have working management, a network of
             possible partners, and sources for funding. What next?</p>
         <div class="jigsaw-container relative flex justify-center items-center">
-            <img class="h-96" src="/assets/longterm-puzzle-bg.svg" [ngClass]="{'invisible': !puzzleComplete}">
+            <img class="h-96" src="/assets/longterm-puzzle-bg.svg" [ngClass]="{'invisible': !puzzleComplete}" alt="Puzzle completed">
             <div class="absolute h-full w-full top-0 left-0 flex justify-center items-center"
                 [ngClass]="{'opacity-0': puzzleComplete}">
                 <div class="jigsaw h-full" image="/assets/longterm-puzzle-active.svg" [columns]="4" [rows]="3"
