--- a/src/pages/publications/publications.page.html
+++ b/src/pages/publications/publications.page.html
@@ -1,14 +1,14 @@
 <div class="max-w-8xl m-auto pt-6 md:px-6">
     <h1>Books</h1>
     <section class="pb-12">
-        <img src="/assets/mastering_ol3.jpg" class="w-48 pb-4">
+        <img src="/assets/mastering_ol3.jpg" class="w-48 pb-4" alt="Mastering OpenLayers 3 book cover">
         <a href="https://www.packtpub.com/en-us/product/mastering-openlayers-3-9781785281006" target="_blank">Farkas, G.
             (2016). Mastering OpenLayers 3. Packt Publishing Ltd. 285 p.</a>
         <p class="pb-6 pt-2">This book was my first serious contribution to IT literature. The syntax, the examples, and
             all the code are heavily outdated. The principles and the philosophy behind OpenLayers discussed in this
             book are still sound, though.</p>
 
-        <img src="/assets/practical_gis.jpg" class="w-48 pb-4">
+        <img src="/assets/practical_gis.jpg" class="w-48 pb-4" alt="Practical GIS book cover">
         <a href="https://www.packtpub.com/en-us/product/practical-gis-9781787123328" target="_blank">Farkas, G. (2017).
             Practical GIS. Packt Publishing Ltd. 372 p.</a>
         <p class="pb-6 pt-2">As usual, I accumulated, synthesized, and distilled all the teaching, research, and
